testdata/baselines/reference/submodule/compiler/jsExportAssignmentNonMutableLocation.errors.txt
file.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
file.js(4,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== file.js (2 errors) ====
    const customSymbol = Symbol("custom");
    
    // This is a common pattern in Node’s built-in modules:
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~
        customSymbol,
    ~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    exports.customSymbol2 = Symbol("custom");